--- a/src/app/cadastro/departamento/departamento.component.html
+++ b/src/app/cadastro/departamento/departamento.component.html
@@ -26,7 +26,7 @@
               <td mat-cell *matCellDef="let row" width="50px">
                 <button id="editar" role="button" attribute="aria-label" mat-icon-button matTooltip="Editar"
                   matTooltipClass="tootip-btn" aria-label="Editar">
-                  <mat-icon (click)="editar(row.id)">edit</mat-icon>
+                  <mat-icon color="primary" (click)="editar(row.id)">edit</mat-icon>
                 </button>
               </td>
             </ng-container>
@@ -35,7 +35,7 @@
               <th mat-header-cell *matHeaderCellDef width="50px"> Excluir </th>
               <td mat-cell *matCellDef="let row" width="50px">
                 <button mat-icon-button>
-                  <mat-icon (click)="excluir(row.id)">delete</mat-icon>
+                  <mat-icon color="warn" (click)="excluir(row.id)">delete</mat-icon>
                 </button>
               </td>
             </ng-container>
