--- a/src/app/cadastro/departamento/departamento-modal/departamento-modal.component.html
+++ b/src/app/cadastro/departamento/departamento-modal/departamento-modal.component.html
@@ -8,7 +8,7 @@
 
   <mat-card-content>
 
-    <form [formGroup]="frm">
+    <form [formGroup]="frmDepartamento">
 
       <div fxLayout="column">
 
@@ -16,30 +16,11 @@
 
           <mat-form-field fxFlex>
             <mat-label>Descrição</mat-label>
-            <input matInput placeholder="Descrição" formControlName="descricao">
+            <input matInput placeholder="Descrição" formControlName="descricao" required>                       
           </mat-form-field>
-
-          <!-- <mat-form-field fxFlex>
-            <mat-label>Nome 2</mat-label>
-            <input matInput formControlName="nome2">
-          </mat-form-field> -->
 
         </div>
-
-        <!-- <div fxLayout="row" fxFlex fxLayoutGap="10px">
-
-          <mat-form-field fxFlex="25%">
-            <mat-label>Nome 3</mat-label>
-            <input matInput formControlName="nome3">
-          </mat-form-field>
-
-          <mat-form-field fxFlex>
-            <mat-label>Nome 4</mat-label>
-            <input matInput formControlName="nome4">
-          </mat-form-field>
-
-        </div> -->
-
+       
       </div>
 
     </form>
@@ -49,7 +30,7 @@
   <mat-card-actions>
 
     <div fxLayoutAlign="end start">
-      <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
+      <button [disabled]="frmDepartamento.invalid" mat-raised-button color="primary" (click)="salvar()">Salvar</button>
     </div>
 
   </mat-card-actions>
