--- a/src/app/cadastro/departamento/departamento.component.html
+++ b/src/app/cadastro/departamento/departamento.component.html
@@ -4,12 +4,31 @@
 
     <div fxFlex>
 
-      <mat-card>
-
+      <mat-card>        
 
         <div>
           <button mat-raised-button color="primary" (click)="novo()">Novo</button>
           <br>
+        </div>
+
+        <div style="padding: 10px;">
+
+          <!-- <input (changeValue)="changeFn($event)"> -->
+
+          <form>
+
+            <mat-form-field fxFlex>
+
+              <mat-label>Pesquisa</mat-label>
+
+              <input matInput (change)="changeFn($event)">
+
+              <mat-icon color="primary" matSuffix>search</mat-icon>
+
+            </mat-form-field>
+
+          </form>
+
         </div>
 
         <div>
@@ -40,26 +59,14 @@
               </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
           </table>
 
-          <!-- <table mat-table fxFlex [dataSource]="dsDepartamento" matSort class="mat-elevation-z8">
-
-            <ng-container matColumnDef="descricao">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
-              <td mat-cell *matCellDef="let row">{{row.descricao}}</td>
-
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-            <th mat-row *matRowDef="let row; columns: displayedColumns"></th>
-
-          </table> -->
-
         </div>
 
+        <mat-paginator [pageSizeOptions]="[5,10,20,50]" showFirstLastButtons></mat-paginator>
 
       </mat-card>
 
