--- a/src/app/cadastro/departamento/departamento.component.html
+++ b/src/app/cadastro/departamento/departamento.component.html
@@ -4,7 +4,7 @@
 
     <div fxFlex>
 
-      <mat-card>        
+      <mat-card>
 
         <div>
           <button mat-raised-button color="primary" (click)="novo()">Novo</button>
@@ -13,21 +13,15 @@
 
         <div style="padding: 10px;">
 
-          <!-- <input (changeValue)="changeFn($event)"> -->
+          <mat-form-field fxFlex>
 
-          <form>
+            <mat-label>Pesquisa</mat-label>
 
-            <mat-form-field fxFlex>
+            <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Pesquisa" autocomplete="off">
 
-              <mat-label>Pesquisa</mat-label>
+            <mat-icon color="primary" matSuffix>search</mat-icon>
 
-              <input matInput (change)="changeFn($event)">
-
-              <mat-icon color="primary" matSuffix>search</mat-icon>
-
-            </mat-form-field>
-
-          </form>
+          </mat-form-field>
 
         </div>
 
