Uppercase Descrição departamento

--- a/src/app/cadastro/departamento/departamento.component.html
+++ b/src/app/cadastro/departamento/departamento.component.html
@@ -31,7 +31,7 @@
 
             <ng-container matColumnDef="descricao">
               <th mat-header-cell *matHeaderCellDef> Descrição </th>
-              <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
+              <td mat-cell *matCellDef="let row" style="text-transform:uppercase"> {{row.descricao}} </td>
             </ng-container>
 
             <ng-container matColumnDef="editar">
