--- a/src/app/cadastro/departamento/departamento-modal/departamento-modal.component.html
+++ b/src/app/cadastro/departamento/departamento-modal/departamento-modal.component.html
@@ -16,7 +16,7 @@
 
           <mat-form-field fxFlex>
             <mat-label>Descrição</mat-label>
-            <input matInput placeholder="Descrição" formControlName="descricao" required>  
+            <input matInput style="text-transform: uppercase" placeholder="Descrição" formControlName="descricao" required>  
             <mat-error *ngIf="frmDepartamento.controls['descricao'].hasError('required')">Descrição is required</mat-error>
             <mat-error *ngIf="frmDepartamento.controls['descricao'].hasError('minlength')">Descrição should be more than 3 characters</mat-error>
             <mat-error *ngIf="frmDepartamento.controls['descricao'].hasError('maxlength')">Descrição should be less than 15 characters</mat-error> 
